complete, all, and incomplete functionality

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
    <div class="container" id="taskList">
 
-   		<script type="x-handlebars-template" id="all-tasks-template">
+   		<script type="x-handlebars-template" id="tasks-template">
 
    			{{#each this}}
 			<div class="taskWrap row">
