adding buttons on each task

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
    		<script type="x-handlebars-template" id="tasks-template">
 
    			{{#each this}}
-			<div class="taskWrap row">
+			<div class="taskWrap row" id="taskWrap">
 
 			  <h2>Task</h2>
           
