adding dymnamically created buttons to each task

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,10 @@
               Created at: {{this.createdAt}}
               </div>
 
+              <div class="infoWrap">
+              <button id="{{this.id}}" class="mark">{{this.button}}</button>
+              </div>
+
             </div>
             {{/each}}
 
