displaing newly created task to page

--- a/public/index.html
+++ b/public/index.html
@@ -30,18 +30,19 @@
 		   	</div>
 		</div>
 
-		<div class="row centerRow">
-			<div class="cell columns5">
+		<div class="row centerRow pushRight">
+			<div class="cell columns3">
 				<h1>Search for a task</h1>
 			   	<input type="text" value="Task ID#" id="searchInput">
 			   	<button id="search">Search</button>
 		   	</div>
 		
-			<div class="cell columns5">
+			<div class="cell columns6">
 				<h1>Create a new task</h1>
-			   	<input type="text" value="Create New Task" id="createInput">
-		   	<button id="create">Create</button>
-		   	</div>
+			   	<input type="text" value="Value" id="valueInput">
+          <input type="text" value="Task" id="createInput">
+          <button id="create">Create</button>
+      </div>
 		</div>
 	</div>
    </header>
