adding responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,16 @@
    	  		<h1>Keep Track of Your Tasks. Get Experience Points. Get Rewarded.</h1>
    	  	</div>
 
-   	  	<div class="row centerRow">
-   	  		<div class="cell columns3">
+   	  	<div class="row centerRow under600">
+   	  		<div class="cell columns3 new3">
 		   		<button id="completed">Completed</button>
 		   	</div>
 
-		   	<div class="cell columns3">
+		   	<div class="cell columns3 new3">
 		   		<button id="all">All Tasks</button>
 		   	</div>
 
-		   	<div class="cell columns3">
+		   	<div class="cell columns3 new3 noLeftPad">
 		   		<button id="incomplete">Incomplete</button>
 		   	</div>
 		</div>
