--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>TodoRPG</title>
-    	<link rel="stylesheet/less" type="text/css" href="style.less" />
-    	<script src="libs/less.min.js" type="text/javascript"></script>
+    <link rel="stylesheet/less" type="text/css" href="style.less" />
+    <script src="libs/less.min.js" type="text/javascript"></script>
 		<script src="libs/jquery.js"></script>
 		<script src="libs/underscore.js"></script>
 		<script src="libs/handlebars.js"></script>
-		<script src="index.js"></script>
+		<script src="libs/backbone.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
    <header>
