--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<script src="libs/underscore.js"></script>
 		<script src="libs/handlebars.js"></script>
 		<script src="libs/backbone.js"></script>
+    <script src="libs/moment.js"></script>
     <script src="index.js"></script>
   </head>
 
